# prg1

./: README.md
pratical-work-1/: montantEnToutesLettres.cpp
pratical-work-2/: CMakeLists.txt  README.md  main.cpp
pratical-work-2/data/: BRK-B.csv  QQQ-2.csv  QQQ.csv  SHY-2.csv  SHY.csv  SPY-2.csv  SPY.csv  TLT-2.csv  TLT.csv
pratical-work-2/display/: showResult.cpp  showResult.h
pratical-work-2/files/: fileReader.cpp  fileReader.h
pratical-work-2/formules/: formules.cpp  formules.h
pratical-work-3/: CMakeLists.txt  README.md  console_io.cpp  console_io.h  game.cpp  game.h  main.cpp
pratical-work-4/: CMakeLists.txt  README.md  longInt.cpp  longInt.h  main.cpp
pratical-work-4/executables/: a061084.cpp  factorial.cpp  fibonacci.cpp
pratical-work-4/test/: a061084.h  factorial.h  fibonacci.h
pratical-work-5/: CMakeLists.txt  Precedent.md  README.md  longInt.h  longIntImplement.h  main.cpp
pratical-work-5/executables/: a061084.cpp  factorial.cpp  fibonacci.cpp
pratical-work-5/test/: a061084.h  factorial.h  fibonacci.h
